--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+Doin' some Testing
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
