--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,7 @@
 Doin' some Testing
 
 This README would normally document whatever steps are necessary to get the
-application up and running.
+application up and running...
 
 Testing branch
 
